tests/baselines/reference/unusedTypeParameterInFunction2.errors.txt
tests/cases/compiler/unusedTypeParameterInFunction2.ts(1,16): error TS6133: 'Y' is declared but never used.


==== tests/cases/compiler/unusedTypeParameterInFunction2.ts (1 errors) ====
    function f1<X, Y>() {
                   ~
!!! error TS6133: 'Y' is declared but never used.
        var a: X;
        a;
    }